--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN="NzgzMDYwMTM0MzA5NTI3NjUz.X8VPlA.BvdDGCchilVL68n_vE82qeFpSG0"
-PREFIX="+"
+TOKEN="NzgzMDYwMTM0MzA5NTI3NjUz.X8VPlA.MMX_M02B1gch4FY_as5vd-0nLNw"
+PREFIX="^^"
